added a title and a description

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: The Neon Tempest
+description: Colorful and creative makeup cases to be as individual on the outside as the makeup on the inside
