--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: The Neon Tempest
-description: Colorful and creative makeup cases to be as individual on the outside as the makeup on the inside
+description: Custom designed colorful makeup cases
