--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: The Neon Tempest
-description: Custom designed colorful makeup cases
+description: Stylish and Colorful Makeup Cases
