--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # SITE CONFIGURATION
-baseurl: "/fengzhichu-theme" # Set it to "" if use for personal site. The subpath of your site, e.g. /blog/
-url: "https://fengzhichu.com/fengzhichu-theme" # the base hostname & protocol for your site
+baseurl: "/theneontempest" # Set it to "" if use for personal site. The subpath of your site, e.g. /blog/
+url: "theneontempest.com" # the base hostname & protocol for your site
 imageurl: "https://source.unsplash.com/category/nature/2600x500" #"https://unsplash.it/2600/500?random"
 
 # THEME-SPECIFIC CONFIGURATION
 theme:
   # Meta
-  title: YOUR TITLE
+  title: The Neon Tempest
   #avatar: avatar.png
   hometitle: Home #display on navigation menu.
   yoursitetitle: YOUR LOGO
