--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ sechby:
   tag:   #with
 
 # BUILD SETTINGS
-markdown: redcarpet
+#markdown: redcarpet
 highlighter: pygments
 sass:
   sass_dir: _sass
