--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ sechby:
 
 # BUILD SETTINGS
 #markdown: redcarpet
-highlighter: pygments
+highlighter: rogue
 sass:
   sass_dir: _sass
   style: :compressed
