--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: The Neon Tempest
-description: Stylish and Colorful Makeup Cases
+description: Colorful and Portable Custom Eyeshadow Cases  
